objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Is_Parent_Asset__c</fullName>
        <formula>ISBLANK(ParentId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_CPQMultiplier__c</fullName>
        <formula>TEXT(Product2.L2I_CPQMultiplier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Multiplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Migration key for program table load</inlineHelpText>
        <label>L2I_External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Lead_Time__c</fullName>
        <description>Lead time from Item Master</description>
        <formula>Product2.L2I_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the number of calendar days for lead time for this part</inlineHelpText>
        <label>Item Master Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONE__c</fullName>
        <description>Field to enable record counting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to enable record counting</inlineHelpText>
        <label>ONE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Additional_AR_Invoice_Notes__c</fullName>
        <label>Additional AR Invoice Notes</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Airbus_D1_Date__c</fullName>
        <label>Airbus D1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Aircraft__c</fullName>
        <formula>PT_Install_Location__r.ShipSet__r.Aircraft__r.L2I_Registration_Number__c</formula>
        <label>Aircraft</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Asset_Display_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Available_Quantity_Child__c</fullName>
        <description>Value sourced from the Available Quantity at the related Parent Asset level</description>
        <formula>PT_Available_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity Child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Available_Quantity__c</fullName>
        <formula>IF(
ISBLANK(ParentId), Quantity  -  PT_Total_Order_Quantity__c,   Parent.Quantity -  Parent.PT_Total_Order_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_CCC__c</fullName>
        <formula>IF( ISBLANK(PT_Install_Location__r.ShipSet__c), 

  IF ( PT_Install_Location__r.Solution_Group__r.PT_is_IFC__c &amp;&amp; NOT(BEGINS(PT_Program__r.Program_Number__c, &quot;E&quot;)), 

	&quot;E&quot; &amp; RIGHT(PT_Program__r.PT_Program_Number_Alt__c, 7),

	PT_Program__r.Program_Number__c ),

	IF ( PT_Install_Location__r.Solution_Group__r.PT_is_IFC__c &amp;&amp; NOT(BEGINS(PT_Program__r.Program_Number__c, &quot;E&quot;)), 

	&quot;E&quot; &amp; RIGHT(PT_Program__r.PT_Program_Number_Alt__c, 7),

    PT_Program__r.Program_Number__c )

 )

&amp; 

IF( ISBLANK(PT_Install_Location__r.ShipSet__c), 

   TEXT(PT_Install_Location__r.Part_List_Opportunity__r.PT_PPL_Type__c),

     PT_Install_Location__r.ShipSet__r.PT_Line_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost Collection Code Formula</inlineHelpText>
        <label>Cost Collection Code (CCC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Can_be_Processed__c</fullName>
        <formula>IF (OR (Text(PT_Status__c) = &#39;New&#39;, Text(PT_Status__c) = &#39;Active&#39;, Text(PT_Status__c) = &#39;Pending Move&#39;, Text(PT_Status__c) = &#39;Reinitialized&#39;, Text(PT_Status__c) = &#39;Pending Replaced&#39;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Case_Ship_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Ship to Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.PT_Program__c</field>
                <operation>equals</operation>
                <valueField>Case.PT_Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Change_Type__c</fullName>
        <formula>IF(PT_Is_Pending__c
 ,IF(ISBLANK(PT_Pending__c),&#39;PARTS&#39;,&#39;BOTH&#39;)
 ,IF(ISBLANK(PT_Pending__c),&#39;&#39;,&#39;MROD&#39;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Current Change Type of an Asset</inlineHelpText>
        <label>Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Child_Asset_Error_Message__c</fullName>
        <formula>Name &amp; &quot; | &quot; &amp; Product2.ProductCode &amp; &quot; | &quot; &amp; Shipset_PPL_Link__c &amp; &quot; | &quot; &amp; PT_Install_Location__r.Name</formula>
        <label>Child Asset Error Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Child_Case_List__c</fullName>
        <inlineHelpText>list of IDs for child assets used to tie to PO cases and create orders</inlineHelpText>
        <label>Child_Case List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_Comments__c</fullName>
        <label>Comments</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Configured_Quantity__c</fullName>
        <label>Configured Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Conformity_Discrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conformity Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Conformity_Overwritten__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Indication that Conformity indication flag has been overwritten</description>
        <inlineHelpText>Indication that Conformity indication flag has been overwritten</inlineHelpText>
        <label>Conformity Overwritten</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Conformity_Required__c</fullName>
        <description>Predicts if Conformity is required for the parts/asset</description>
        <formula>IF(BEGINS(PT_Program__r.PT_Program_Type__c, &quot;Production&quot;), false, IF(ISBLANK(PT_Extended_Product_Attribute__c), true, !PT_Extended_Product_Attribute__r.hasPMA__c))</formula>
        <inlineHelpText>Predicts if Conformity is required for the parts/asset</inlineHelpText>
        <label>Conformity Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Conformity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conformity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Customer_PO_Line__c</fullName>
        <label>Customer PO Line</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Customer_PO_Request_Date__c</fullName>
        <label>Customer PO Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Default_Shipping_Org__c</fullName>
        <formula>Product2.L2I_Default_Shipping_Org__c</formula>
        <label>Default Shipping Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Delivery_Schedule_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Schedule Line</label>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Expedited_D1_Text__c</fullName>
        <description>Use for field history tracking. Set via workflow from the Expedited D1 formula.</description>
        <label>Expedited D1 Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Expedited_D1__c</fullName>
        <formula>IF (OR(ISBLANK(PT_Airbus_D1_Date__c),PT_Lead_Time__c &lt; PT_Airbus_D1_Date__c)
    , &#39;No&#39;
    ,IF (ISBLANK(PT_MROD__c)
        , &#39;Yes&#39;
        ,IF (PT_Airbus_D1_Date__c &lt; PT_MROD__c
            , &#39;Yes&#39;
            , &#39;No&#39;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedited D1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Expedited_Text__c</fullName>
        <description>Use for field history tracking. Set via workflow from the Expedited formula.</description>
        <label>Expedited Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Expedited__c</fullName>
        <formula>IF (OR(ISBLANK(PT_Pending__c),PT_Lead_Time__c &lt; PT_Pending__c)
    , &#39;No&#39;
    ,IF (ISBLANK(PT_MROD__c)
        , &#39;Yes&#39;
        ,IF (PT_Pending__c &lt; PT_MROD__c
            , &#39;Yes&#39;
            , &#39;No&#39;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Extended_Price__c</fullName>
        <formula>Price * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PT_Extended_Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extended Product Attribute</label>
        <referenceTo>L2I_Product_Attributes__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Holds__c</fullName>
        <label>Holds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conformity Hold</fullName>
                </value>
                <value>
                    <fullName>Credit Check Failure</fullName>
                </value>
                <value>
                    <fullName>Credit Order Hold</fullName>
                </value>
                <value>
                    <fullName>H/C PO Hold</fullName>
                </value>
                <value>
                    <fullName>Invoicing Hold</fullName>
                </value>
                <value>
                    <fullName>Kit Hold</fullName>
                </value>
                <value>
                    <fullName>No Charge PO Auth Hold</fullName>
                </value>
                <value>
                    <fullName>NOC Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation Hold</fullName>
                </value>
                <value>
                    <fullName>PGA Hold</fullName>
                </value>
                <value>
                    <fullName>PMA Hold</fullName>
                </value>
                <value>
                    <fullName>Pricing Hold - Customer</fullName>
                </value>
                <value>
                    <fullName>Pricing Hold - Marketing</fullName>
                </value>
                <value>
                    <fullName>Pricing Hold - Price Admin</fullName>
                </value>
                <value>
                    <fullName>Reference PO Hold</fullName>
                </value>
                <value>
                    <fullName>SA Misc Hold</fullName>
                </value>
                <value>
                    <fullName>SA PO Amend Hold</fullName>
                </value>
                <value>
                    <fullName>Ship Complete Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_InMROD_approval__c</fullName>
        <formula>IF(OR(ISPICKVAL(PT_Program__r.Airbus_MROD_Approval_Status__c,&quot;Pending&quot;),ISPICKVAL(PT_Program__r.MROD_Approval_Status__c,&quot;Pending&quot;))
,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset in MROD approval</inlineHelpText>
        <label>InMROD_approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Install_Location_MROD_Date__c</fullName>
        <formula>PT_Install_Location__r.MROD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Location MROD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Install_Location_Parent_ID__c</fullName>
        <formula>IF( isPTAsset__c
,IF(ISBLANK(PT_Install_Location__r.ShipSet__c)
,CASESAFEID(PT_Install_Location__r.Part_List_Opportunity__c)
,CASESAFEID(PT_Install_Location__r.ShipSet__c)
)
,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of parent</inlineHelpText>
        <label>Shipset/PPL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Install_Location_Parent__c</fullName>
        <description>Provides a name for the parent of the install location of this asset</description>
        <formula>IF( isPTAsset__c
 ,IF(ISBLANK(PT_Install_Location__r.ShipSet__c)
  ,PT_Install_Location__r.Part_List_Opportunity__r.PT_Part_List_Name__c
  ,PT_Install_Location__r.ShipSet__r.Name
 )
 ,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shipset Name for CPL parts or PPL Name</inlineHelpText>
        <label>Shipset/PPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Install_Location_Pending_MROD_Date__c</fullName>
        <formula>PT_Install_Location__r.Pending_MROD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Location Pending MROD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Install_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>PT_Install_Location__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Is_Airbus__c</fullName>
        <formula>IF( PT_Program_Type__c == &#39;Production-AIRBUS&#39;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Airbus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Is_Kit_Revision_Downlevel__c</fullName>
        <description>Used for conditional formatting in the Manage Parts grid</description>
        <formula>IF ( AND(PT_Kit_Revision_Code__c !=  Product2.PT_Kit_Current_Revision__c, PT_Is_Kit__c = true) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Kit Revision Downlevel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Is_Kit__c</fullName>
        <formula>Product2.L2I_Is_Kit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Is_Pending__c</fullName>
        <formula>IF (OR (Text(PT_Status__c) = &#39;New&#39;, Text(PT_Status__c) = &#39;Pending Removed&#39;, Text(PT_Status__c) = &#39;Pending Move&#39;,
NOT(ISBLANK(PT_Pending_Quantity__c)), NOT(ISBLANK(PT_Pending_Configured_Quantity__c)),  NOT(ISBLANK(PT_Pending_Notes__c)),  NOT(ISBLANK(PT_Pending_Kit_Revision_Code__c)) ) , true, false)</formula>
        <label>Is Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Is_Placeholder_Part__c</fullName>
        <description>This part is a placeholder.</description>
        <formula>Product2.Is_Placeholder_Part__c</formula>
        <label>Is Placeholder Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Kit_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Parent</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Kit Parent)</relationshipLabel>
        <relationshipName>KitChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Kit_Revision_Code__c</fullName>
        <label>Kit Revision Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_LF_Software_Supply_Date__c</fullName>
        <label>LF Software Supply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Time__c</fullName>
        <description>Required Lead Time (Number of Days) for this Product to achieve MROD</description>
        <formula>PT_Program__r.PT_Program_Type_Lead__c
+
TODAY()
+
Product2.L2I_Cumulative_Lead_Time__c
+
IF (PT_Conformity_Required__c
,7
,0
)
+
Product2.L2I_Item_Post_Processing_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Required Lead Time (Number of Days) for this Product to achieve MROD</inlineHelpText>
        <label>PMO Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Lead_Time_old__c</fullName>
        <label>Lead Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Line_Type_ID__c</fullName>
        <formula>Case(PT_Line_Type__c,
					&quot;Eval/Loan Line&quot;, 1659,
					&quot;Invoice Only Line&quot;, 1662,
					&quot;Irvine Direct Software Line&quot;, 1666,
					&quot;Standard Sales Order Line&quot;, 1667,
					&quot;Shipset Credit Line&quot;, 1672,
Null)</formula>
        <label>Line Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PT_Order_Type_Context__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eval/Loan Line</fullName>
                </value>
                <value>
                    <fullName>Invoice Only Line</fullName>
                </value>
                <value>
                    <fullName>Irvine Direct Software Line</fullName>
                </value>
                <value>
                    <fullName>Standard Sales Order Line</fullName>
                </value>
                <value>
                    <fullName>Shipset Credit Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_MROD_Forecast_Date__c</fullName>
        <description>Roll up look for MROD dates</description>
        <formula>if(isblank(PT_MROD__c)
, if(isblank(PT_Install_Location__r.MROD__c),
  if(isblank( PT_Install_Location__r.ShipSet__c ),null, PT_Install_Location__r.ShipSet__r.Delivery_Date__c )
  ,PT_Install_Location__r.MROD__c)
,  PT_MROD__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Roll up look for MROD dates</inlineHelpText>
        <label>MROD Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_MROD__c</fullName>
        <label>MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Note_Status__c</fullName>
        <label>XXNote Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXPart List Note</label>
        <referenceTo>PT_Note__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Notes_Status__c</fullName>
        <label>Notes Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_OEM_Date__c</fullName>
        <label>OEM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Oracle_Line_Status__c</fullName>
        <label>Oracle Line Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Order_Quantity__c</fullName>
        <description>User will populate this field on the Child asset to inform the ordering process the quantity to be ordered as part of this program/ Customer PO Case process</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Order_Splitting__c</fullName>
        <formula>IF(
PT_Conformity_Required__c = True,
PT_CCC__c &amp; &quot;;&quot; &amp; &quot;Conformity&quot;,
PT_CCC__c
)</formula>
        <label>Order Splitting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Order_Type_Context__c</fullName>
        <label>Order Type Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eval/Loan Order</fullName>
                </value>
                <value>
                    <fullName>Invoice Only Order</fullName>
                </value>
                <value>
                    <fullName>Irvine Direct - S/W</fullName>
                </value>
                <value>
                    <fullName>MILESTONE</fullName>
                </value>
                <value>
                    <fullName>NRE Service</fullName>
                </value>
                <value>
                    <fullName>Standard Stock Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Orderable__c</fullName>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Ordered_Status__c</fullName>
        <formula>IF(PT_Available_Quantity__c = 0, &quot;Full&quot;,IF(PT_Available_Quantity__c &lt; Quantity,&quot;Partial&quot;,&quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator of Ordered status</inlineHelpText>
        <label>Ordered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Original_Install_Location__c</fullName>
        <label>Original Install Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PPL_Type__c</fullName>
        <formula>TEXT(PT_Install_Location__r.Part_List_Opportunity__r.PT_PPL_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPL Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Configured_Quantity__c</fullName>
        <label>Pending Configured Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Kit_Revision_Code__c</fullName>
        <label>Pending Kit Revision Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXPending Part List Note</label>
        <referenceTo>PT_Note__c</referenceTo>
        <relationshipLabel>Assets (Pending Part List Note)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Notes__c</fullName>
        <label>Pending Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Quantity__c</fullName>
        <label>Pending Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Reason__c</fullName>
        <label>XXPending Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending__c</fullName>
        <label>Pending MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Price__c</fullName>
        <description>Number Field to Display Price with no &quot;USD&quot; for Parts List Grid</description>
        <formula>Price</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Product_Code_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; + Id,  Product2.ProductCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Type__c</fullName>
        <formula>PT_Program__r.PT_Program_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Proposed_Part_Code__c</fullName>
        <label>PT_Proposed_Part_Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Proposed_Part_Nomenclature__c</fullName>
        <label>PT_Proposed_Part_Nomenclature</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Quantity__c</fullName>
        <description>Number Field to Display Quantity with no Decimals for Parts List Grid</description>
        <formula>Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Reference_PO_Request_Date__c</fullName>
        <label>Reference PO Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Reference_PO__c</fullName>
        <label>Reference PO</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Revision_Number__c</fullName>
        <label>Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Risk__c</fullName>
        <label>Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PT_SSD__c</fullName>
        <formula>PT_MROD__c  - PT_Program__r.PT_Program_Type_Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Ship Date Logic - used to build MROD</inlineHelpText>
        <label>SSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Ship_from_Org_ID__c</fullName>
        <formula>Case(PT_Warehouse__c,
&quot;BOT&quot;, 21,
&quot;GLO&quot;, 22,
&quot;IRV&quot;, 23,
&quot;BRP&quot;, 25,
&quot;LRP&quot;, 26,
&quot;DRP&quot;, 27,
&quot;SRP&quot;, 28,
&quot;DLR&quot;, 29,
&quot;TRP&quot;, 30,
&quot;DSP&quot;, 31,
&quot;MMS&quot;, 32,
&quot;COW&quot;, 48,
&quot;OEM&quot;, 49,
&quot;OST&quot;, 50,
&quot;RTN&quot;, 51,
&quot;OSA&quot;, 52,
&quot;ORP&quot;, 432,
&quot;CAR&quot;, 472,
&quot;PTS&quot;, 592,
&quot;DSO&quot;, 672,
&quot;BUY&quot;, 1032,
&quot;SYR&quot;, 1092,
&quot;DUB&quot;, 1892,
&quot;DEV&quot;, 1932,
&quot;LON&quot;, 2032,
&quot;LFR&quot;, 2514,
&quot;PWS&quot;, 4434,
&quot;PRC&quot;, 4494,
&quot;NRP&quot;, 4994,
&quot;ELF&quot;, 7014,
&quot;MXO&quot;, 8674,
&quot;DUN&quot;, 9274,
&quot;KRA&quot;, 9514,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship from Org ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Ship_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value in Ship to Location does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>L2I_Site__c.PT_AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.PT_Case_Ship_to_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Site_Use_Code__c</field>
                <operation>equals</operation>
                <value>Ship_To</value>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Software_Demand_Type__c</fullName>
        <label>Software Demand Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Only</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
                <value>
                    <fullName>No Sales Order Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Special_Op_Date__c</fullName>
        <label>Special Op’s Date</label>
        <type>Date</type>
    </fields>
</CustomObject>